kubernetes/apps/devops-tools/devops-tools/jenkins/app/dashboard-middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-basicauth
spec:
  basicAuth:
    secret: dashboard-auth
